--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ uvloop = { version = "^0.21.0", markers = "sys_platform != 'win32'" }
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
+pytest-cov = "^4.1.0"
 black = "^23.11.0"
 flake8 = "^6.1.0"
 isort = "^5.13.2"
