--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ APScheduler = "^3.10.4"
 pytz = "^2024.2"
 python-dateutil = "^2.9.0"
 uvloop = { version = "^0.21.0", markers = "sys_platform != 'win32'" }
+Pillow = "^10.0.0"
+Flask = "^2.3.3"
+Werkzeug = "^2.3.7"
+yt-dlp = "^2023.10.13"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
