--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,16 @@ CREATIVE_TOPIC_ID=1121
 
 # Ollama Configuration
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=deepseek-v3.1:671b-cloud
+OLLAMA_BASE_MODEL=deepseek-v3.1:671b-cloud  # Основная модель для текста
+OLLAMA_VISION_MODEL=qwen3-vl:4b-instruct  # Модель для анализа изображений
+OLLAMA_MEMORY_MODEL=glm-4.6:cloud  # Модель для поиска в памяти и RAG
 OLLAMA_TIMEOUT=90
+
+# ChromaDB Configuration (для RAG - "Мозг Олега")
+CHROMADB_PERSIST_DIR=./data/chroma  # Директория для сохранения данных ChromaDB
+CHROMADB_COLLECTION_NAME=oleg_kb  # Название коллекции для базы знаний
+EMBEDDING_MODEL=all-MiniLM-L6-v2  # Модель для генерации эмбеддингов
+SIMILARITY_THRESHOLD=0.7  # Порог схожести для RAG (0.0 - 1.0)
 
 # Database Configuration
 # Для SQLite:
