--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.9'
+version: '3.8'
 
 services:
   # Основной сервис бота
   oleg-bot:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: oleg-bot
     restart: unless-stopped
     env_file:
@@ -18,10 +16,13 @@ services:
       - oleg-data:/app/data
       # Сохранение логов
       - oleg-logs:/app/logs
+      # Данные векторной базы
+      - chroma-data:/app/chroma_data
     networks:
       - oleg-network
     depends_on:
       - ollama
+      - chromadb
     healthcheck:
       test: ["CMD", "python", "-c", "import logging; print('alive')"]
       interval: 30s
@@ -51,8 +52,74 @@ services:
       - ollama-cache:/root/.cache
     networks:
       - oleg-network
+    command: >
+      sh -c "
+      ollama serve &
+      sleep 30s &&
+      ollama pull deepseek-v3.1:671b-cloud &&
+      ollama pull qwen3-vl:4b &&
+      ollama pull glm-4.6:cloud &&
+      tail -f /dev/null
+      "
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "2"
+
+  # ChromaDB - векторная база данных для RAG (Мозг Олега)
+  chromadb:
+    image: ghcr.io/chroma-core/chroma:latest
+    container_name: chromadb-server
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    volumes:
+      - chroma-data:/chroma/chroma
+    environment:
+      - CHROMA_DB_IMPL=clickhouse
+      - CLICKHOUSE_HOST=clickhouse
+      - CLICKHOUSE_PORT=9000
+    networks:
+      - oleg-network
+    depends_on:
+      - clickhouse
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/heartbeat"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "2"
+
+  # ClickHouse - для обеспечения хранения в ChromaDB
+  clickhouse:
+    image: clickhouse/clickhouse-server:latest
+    container_name: clickhouse-server
+    restart: unless-stopped
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
+    ports:
+      - "9000:9000"
+      - "8123:8123"
+    networks:
+      - oleg-network
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8123/ping"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -90,6 +157,10 @@ volumes:
   ollama-models:
     driver: local
   ollama-cache:
+    driver: local
+  chroma-data:
+    driver: local
+  clickhouse-data:
     driver: local
   # postgres-data:
   #   driver: local
