feat: some fixes

--- a/.env.docker
+++ b/.env.docker
@@ -5,17 +5,17 @@
 # Telegram Bot
 # ============================================
 TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
-PRIMARY_CHAT_ID=YOUR_CHAT_ID_HERE
-SUMMARY_TOPIC_ID=YOUR_SUMMARY_TOPIC_ID_HERE
-CREATIVE_TOPIC_ID=YOUR_CREATIVE_TOPIC_ID_HERE
+OWNER_ID=YOUR_TELEGRAM_ID_HERE
 
 # ============================================
 # Ollama Configuration
 # ============================================
 # Для Docker используй имя сервиса вместо localhost
 OLLAMA_BASE_URL=http://ollama:11434
-OLLAMA_MODEL=deepseek-v3.1:671b-cloud
-OLLAMA_TIMEOUT=300
+OLLAMA_BASE_MODEL=deepseek-v3.1:671b-cloud  # Основная модель для текста
+OLLAMA_VISION_MODEL=qwen3-vl:4b-instruct  # Модель для анализа изображений
+OLLAMA_MEMORY_MODEL=glm-4.6:cloud  # Модель для поиска в памяти и RAG
+OLLAMA_TIMEOUT=90
 
 # ============================================
 # Database
