--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,8 @@
 # https://t.me/BotFather для получения токена
 TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
 
-# ID основного чата (целое число)
-PRIMARY_CHAT_ID=123456789
-
-# ID темы для ежедневного пересказа (#dailysummary)
-SUMMARY_TOPIC_ID=1
-
-# ID темы для креативного контента (истории/цитаты)
-CREATIVE_TOPIC_ID=1121
+# ID владельца бота для полного доступа
+OWNER_ID=YOUR_TELEGRAM_ID_HERE
 
 # Ollama Configuration
 OLLAMA_BASE_URL=http://localhost:11434
