--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.12"
 aiogram = "^3.13.1"
 python-dotenv = "^1.0.1"
 SQLAlchemy = "^2.0.36"
