feat: major refactoring v2.0 - Python 3.12+ compatibility, testing, CI/CD
 Features:
- Add Pydantic Settings with validation for configuration
- Add rate limiting middleware with sliding window algorithm
- Add Alembic database migrations support
- Add comprehensive testing infrastructure (pytest)
- Add /help command with full command list
- Add Redis client for distributed caching
- Add Prometheus metrics collection
- Add health check endpoints

 Improvements:
- Replace deprecated datetime.utcnow() with timezone-aware utc_now()
- Optimize Dockerfile with multi-stage build
- Add pre-commit hooks (black, isort, flake8, mypy)
- Add GitHub Actions CI/CD pipeline
- Add Makefile with 20+ development commands
- Add production docker-compose with PostgreSQL, Redis, Monitoring
- Improve security with unprivileged Docker user

 Fixes:
- Fix missing imports in qna.py (select, generate_reply_with_context)
- Fix all datetime.utcnow() usages (50+ occurrences)
- Fix type hints and import errors

 Documentation:
- Add QUICKSTART.md for quick start guide
- Add INSTALLATION.md for detailed setup
- Add IMPROVEMENTS.md with all changes
- Add VERIFICATION.md for testing improvements
- Add TESTING.md for test documentation
- Update CHANGELOG.md with v2.0 changes
- Update README.md with new features

 Testing:
- Add unit tests for utils, config, rate limiter
- Add integration tests for database
- Add test fixtures and mocks
- Add pytest configuration

 Security:
- Add input validation with Pydantic
- Add rate limiting to prevent abuse
- Add unprivileged user in Docker
- Add token format validation

 Performance:
- Optimize Docker image size (~40% reduction)
- Add caching layers in Docker build
- Add Redis for distributed caching

Files changed: 50+
Lines added: ~3500+
Tests added: 15+

--- a/.env.docker
+++ b/.env.docker
@@ -21,10 +21,32 @@ OLLAMA_TIMEOUT=90
 # Database
 # ============================================
 # SQLite (по умолчанию)
-DATABASE_URL=sqlite:///./data/oleg.db
+DATABASE_URL=sqlite+aiosqlite:///./data/oleg.db
 
 # PostgreSQL (раскомментируй и используй если включен сервис postgres)
-# DATABASE_URL=postgresql+asyncpg://oleg:password@postgres:5432/oleg_db
+# DATABASE_URL=postgresql+asyncpg://oleg:changeme@postgres:5432/oleg_db
+
+# ============================================
+# Redis (для кэширования и rate limiting)
+# ============================================
+REDIS_ENABLED=true
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+
+# ============================================
+# Rate Limiting
+# ============================================
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REQUESTS=10
+RATE_LIMIT_WINDOW=60
+
+# ============================================
+# Toxicity Analysis
+# ============================================
+TOXICITY_ANALYSIS_ENABLED=true
+TOXICITY_THRESHOLD=75
 
 # ============================================
 # Logging
