--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
 aiogram==3.13.1
 python-dotenv==1.0.1
+pydantic==2.10.5
+pydantic-settings==2.7.1
 SQLAlchemy==2.0.36
 aiosqlite==0.20.0
+asyncpg==0.29.0
 alembic==1.14.0
 httpx==0.27.2
 APScheduler==3.10.4
 pytz==2024.2
 python-dateutil==2.9.0.post0
 uvloop==0.21.0; sys_platform != 'win32'
-Pillow==10.0.0
+Pillow==10.4.0
 yt-dlp==2023.10.13
 chromadb==0.6.0
 ollama==0.3.3
+cachetools==5.5.0
+redis==5.0.1
+
+# Development dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+black==23.12.1
+flake8==7.0.0
+isort==5.13.2
+mypy==1.8.0
+pre-commit==3.6.0
+pytest-mock==3.12.0
