Олег 4.0  Production Ready Release
 Новые фичи:
- Redis для распределенного rate limiting и кэширования
- PostgreSQL поддержка для продакшена
- Prometheus метрики (/metrics, /health, /ready)
- Grafana dashboard из коробки
- Health checks для Kubernetes
- Graceful fallback при проблемах с Ollama

 Тестирование:
- 33 теста (unit + integration)
- Покрытие: rate limiter, redis, config, metrics, ollama fallback

 Документация:
- Полностью переработанный README
- QUICKSTART.md  быстрый старт
- INSTALLATION.md  подробная установка
- TESTING.md  руководство по тестам
- CHANGELOG.md  история изменений
- WHATS_NEW_V4.md  что нового

 Исправления:
- Удалено дублирование utc_now()
- Улучшена обработка ошибок Ollama

 Docker:
- Добавлен Redis сервис
- Health checks для всех сервисов
- Порт 9090 для метрик

--- a/.env.docker
+++ b/.env.docker
@@ -55,6 +55,12 @@ LOG_LEVEL=INFO
 LOG_FILE=/app/logs/oleg.log
 
 # ============================================
+# Metrics (Prometheus)
+# ============================================
+METRICS_ENABLED=true
+METRICS_PORT=9090
+
+# ============================================
 # Application Settings
 # ============================================
 TIMEZONE=Europe/Moscow
