--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ TIMEZONE=Europe/Moscow
 # Уровень: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 LOG_FILE=logs/oleg.log
+
+# Metrics (Prometheus)
+METRICS_ENABLED=false  # Включить HTTP endpoint для метрик
+METRICS_PORT=9090  # Порт для /metrics, /health, /ready
