--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -12,8 +12,9 @@ scrape_configs:
 
   - job_name: 'oleg-bot'
     static_configs:
-      - targets: ['oleg-bot:8080']
+      - targets: ['oleg-bot:9090']
     metrics_path: '/metrics'
+    scrape_interval: 30s
 
   - job_name: 'postgres'
     static_configs:
