fix: Новые файлы app/services/voice_recognition.py — сервис распознавания голоса app/handlers/voice.py — хендлер голосовых сообщений 📝 Изменённые файлы app/config.py — добавлены настройки медиа app/main.py — добавлен voice_router и инициализация Whisper app/handlers/qna.py — удалён старый хендлер голосовых app/services/content_downloader.py — добавлен флаг, VK Music, Instagram, улучшена обработка ошибок requirements.txt — добавлен openai-whisper .env.example — добавлены настройки медиа

--- a/.env.docker
+++ b/.env.docker
@@ -64,3 +64,13 @@ METRICS_PORT=9090
 # Application Settings
 # ============================================
 TIMEZONE=Europe/Moscow
+
+# ============================================
+# Media Features
+# ============================================
+# Распознавание голосовых сообщений (требует ffmpeg)
+VOICE_RECOGNITION_ENABLED=true
+WHISPER_MODEL=base  # tiny, base, small, medium, large (больше = точнее, но медленнее)
+
+# Автозагрузка видео/аудио по ссылкам (YouTube, TikTok, VK и др.)
+CONTENT_DOWNLOAD_ENABLED=true
