--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,8 @@ LOG_FILE=logs/oleg.log
 # Metrics (Prometheus)
 METRICS_ENABLED=false  # Включить HTTP endpoint для метрик
 METRICS_PORT=9090  # Порт для /metrics, /health, /ready
+
+# Media Features
+VOICE_RECOGNITION_ENABLED=true  # Включить распознавание голосовых (требует openai-whisper)
+WHISPER_MODEL=base  # Модель Whisper: tiny, base, small, medium, large
+CONTENT_DOWNLOAD_ENABLED=true  # Включить автозагрузку видео/аудио по ссылкам
