--- a/.env.docker
+++ b/.env.docker
@@ -13,7 +13,7 @@ OWNER_ID=YOUR_TELEGRAM_ID_HERE
 # Для Docker используй имя сервиса вместо localhost
 OLLAMA_BASE_URL=http://ollama:11434
 OLLAMA_BASE_MODEL=deepseek-v3.1:671b-cloud  # Основная модель для текста
-OLLAMA_VISION_MODEL=qwen3-vl:4b-instruct  # Модель для анализа изображений
+OLLAMA_VISION_MODEL=qwen3-vl:235b-cloud  # Модель для анализа изображений
 OLLAMA_MEMORY_MODEL=glm-4.6:cloud  # Модель для поиска в памяти и RAG
 OLLAMA_TIMEOUT=90
 
