--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ Pillow = "^10.0.0"
 yt-dlp = "^2023.10.13"
 chromadb = "^0.6.0"
 ollama = "^0.3.3"
+pydantic-settings = "^2.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
