--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ redis==5.0.1
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
+hypothesis==6.92.1
 black==23.12.1
 flake8==7.0.0
 isort==5.13.2
