--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ yt-dlp = "^2023.10.13"
 chromadb = "^0.6.0"
 ollama = "^0.3.3"
 pydantic-settings = "^2.12.0"
+arq = "^0.26.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
