feat(tts): switch to Silero TTS for Russia support
- Add Silero TTS service (offline, no geo-blocking)
- Male voice 'aidar' by default for Oleg
- Preload model on bot startup
- Cache model in Docker volume
- Remove Edge TTS dependency for /say command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - oleg-logs:/app/logs
       # Данные векторной базы
       - chroma-data:/app/chroma_data
-      # Кэш моделей Whisper (чтобы не скачивать при каждом перезапуске)
+      # Кэш моделей Whisper и Silero TTS (чтобы не скачивать при каждом перезапуске)
       - whisper-cache:/home/oleg/.cache
     networks:
       - oleg-network
