feat: добавлена панель владельца бота (/owner)
- Новый хендлер owner_panel.py с командой /owner
- Управление функциями бота (вкл/выкл модулей в runtime)
- Рассылка сообщений по всем чатам
- Статус системы и сервисов
- Управление чатами (просмотр, выход)
- Экстренные действия (выкл все функции, перезапуск)
- Middleware feature_toggle для проверки состояния функций
- Авторизация по OWNER_ID из .env

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,13 @@
 TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
 
 # ID владельца бота для полного доступа
+# Узнать свой ID можно у @userinfobot или @getmyid_bot
+# Владелец имеет доступ к команде /owner с панелью управления:
+# - Включение/выключение функций бота
+# - Рассылка сообщений
+# - Статус системы
+# - Управление чатами
+# - Экстренные действия
 OWNER_ID=YOUR_TELEGRAM_ID_HERE
 
 # Ollama Configuration
