--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -13,28 +13,17 @@ python-dateutil==2.9.0.post0
 uvloop==0.21.0; sys_platform != 'win32'
 Pillow==10.4.0
 yt-dlp==2023.10.13
-openai-whisper==20231117
 chromadb==0.6.0
 ollama==0.3.3
 cachetools==5.5.0
 redis==5.0.1
 arq==0.26.1
+# TTS - edge-tts работает без torch (через Microsoft API)
 edge-tts>=7.0.0
+# gTTS - Google Translate TTS (fallback если Edge заблокирован)
 gTTS>=2.5.0
-# Silero TTS - offline Russian TTS (works in Russia without restrictions)
-# CPU-only torch (much smaller ~200MB vs 800MB)
---extra-index-url https://download.pytorch.org/whl/cpu
-torch>=2.0.0
+# pyttsx3 - офлайн TTS (последний fallback)
+pyttsx3>=2.90
+# STT - faster-whisper легче openai-whisper
+faster-whisper>=1.0.0
 numpy>=1.24.0
-
-# Development dependencies
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-hypothesis==6.92.1
-black==23.12.1
-flake8==7.0.0
-isort==5.13.2
-mypy==1.8.0
-pre-commit==3.6.0
-pytest-mock==3.12.0
