--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,29 +1,30 @@
-aiogram==3.13.1
-python-dotenv==1.0.1
-pydantic==2.9.2
-pydantic-settings==2.6.1
-SQLAlchemy==2.0.36
-aiosqlite==0.20.0
-asyncpg==0.29.0
-alembic==1.14.0
-httpx==0.27.2
-APScheduler==3.10.4
-pytz==2024.2
-python-dateutil==2.9.0.post0
-uvloop==0.21.0; sys_platform != 'win32'
-Pillow==10.4.0
-yt-dlp==2023.10.13
-chromadb==0.6.0
-ollama==0.3.3
-cachetools==5.5.0
-redis==5.0.1
-arq==0.26.1
-# TTS - edge-tts работает без torch (через Microsoft API)
-edge-tts>=7.0.0
-# gTTS - Google Translate TTS (fallback если Edge заблокирован)
-gTTS>=2.5.0
-# pyttsx3 - офлайн TTS (последний fallback)
-pyttsx3>=2.90
-# STT - faster-whisper легче openai-whisper
-faster-whisper>=1.0.0
-numpy>=1.24.0
+# Core dependencies
+aiogram
+python-dotenv
+pydantic
+pydantic-settings
+SQLAlchemy
+aiosqlite
+asyncpg
+alembic
+httpx
+APScheduler
+pytz
+python-dateutil
+uvloop; sys_platform != 'win32'
+Pillow
+yt-dlp
+chromadb
+ollama
+cachetools
+redis
+arq
+
+# TTS
+edge-tts
+gTTS
+pyttsx3
+
+# STT
+faster-whisper
+numpy
