--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,42 @@
-aiogram==3.13.1
-python-dotenv==1.0.1
-pydantic==2.9.2
-pydantic-settings==2.6.1
-SQLAlchemy==2.0.36
-aiosqlite==0.20.0
-asyncpg==0.29.0
-alembic==1.14.0
-httpx==0.27.2
-APScheduler==3.10.4
-pytz==2024.2
-python-dateutil==2.9.0.post0
-uvloop==0.21.0; sys_platform != 'win32'
-Pillow==10.4.0
-yt-dlp==2023.10.13
-openai-whisper==20231117
-chromadb==0.6.0
-ollama==0.3.3
-cachetools==5.5.0
-redis==5.0.1
-arq==0.26.1
-edge-tts>=7.0.0
-gTTS>=2.5.0
-# Silero TTS - offline Russian TTS (works in Russia without restrictions)
-# CPU-only torch (much smaller ~200MB vs 800MB)
+# Core dependencies
+aiogram
+python-dotenv
+pydantic
+pydantic-settings
+SQLAlchemy
+aiosqlite
+asyncpg
+alembic
+httpx
+APScheduler
+pytz
+python-dateutil
+uvloop; sys_platform != 'win32'
+Pillow
+yt-dlp
+chromadb
+ollama
+cachetools
+redis
+arq
+
+# TTS
+edge-tts
+gTTS
+
+# Silero TTS - offline Russian TTS
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch>=2.0.0
-numpy>=1.24.0
+torch
+numpy
 
 # Development dependencies
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-hypothesis==6.92.1
-black==23.12.1
-flake8==7.0.0
-isort==5.13.2
-mypy==1.8.0
-pre-commit==3.6.0
-pytest-mock==3.12.0
+pytest
+pytest-asyncio
+pytest-cov
+hypothesis
+black
+flake8
+isort
+mypy
+pre-commit
+pytest-mock
