feat: v7.8 - fallback модели и уведомления владельцу

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,13 @@ OLLAMA_BASE_MODEL=deepseek-v3.1:671b-cloud  # Основная модель дл
 OLLAMA_VISION_MODEL=qwen3-vl:235b-cloud  # Модель для анализа изображений
 OLLAMA_MEMORY_MODEL=glm-4.6:cloud  # Модель для поиска в памяти и RAG
 OLLAMA_TIMEOUT=90
+OLLAMA_WEB_SEARCH_ENABLED=true  # Включить веб-поиск для актуальной информации
+
+# Fallback модели (локальные, когда cloud недоступен)
+OLLAMA_FALLBACK_ENABLED=true  # Включить автопереключение на локальные модели
+OLLAMA_FALLBACK_MODEL=qwen3:8b  # Резервная модель для текста
+OLLAMA_FALLBACK_VISION_MODEL=qwen3-vl:4b-instruct  # Резервная модель для vision
+OLLAMA_FALLBACK_MEMORY_MODEL=qwen3:8b  # Резервная модель для памяти
 
 # ChromaDB Configuration (для RAG - "Мозг Олега")
 CHROMADB_PERSIST_DIR=./data/chroma  # Директория для сохранения данных ChromaDB
