feat: автопереключение обратно на основную модель + ChromaDB HTTP client

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,12 @@ OLLAMA_FALLBACK_VISION_MODEL=qwen3-vl:4b-instruct  # Резервная моде
 OLLAMA_FALLBACK_MEMORY_MODEL=qwen3:8b  # Резервная модель для памяти
 
 # ChromaDB Configuration (для RAG - "Мозг Олега")
-CHROMADB_PERSIST_DIR=./data/chroma  # Директория для сохранения данных ChromaDB
+# Для Docker: используй имя контейнера chromadb
+CHROMADB_HOST=chromadb  # Хост ChromaDB сервера (пусто для локального хранения)
+CHROMADB_PORT=8000  # Порт ChromaDB сервера
+# Для локальной разработки без Docker: оставь CHROMADB_HOST пустым
+# CHROMADB_HOST=
+CHROMADB_PERSIST_DIR=./data/chroma  # Директория для локального хранения
 CHROMADB_COLLECTION_NAME=oleg_kb  # Название коллекции для базы знаний
 EMBEDDING_MODEL=all-MiniLM-L6-v2  # Модель для генерации эмбеддингов
 SIMILARITY_THRESHOLD=0.7  # Порог схожести для RAG (0.0 - 1.0)
