feat: HuggingFace зеркало для РФ + предзагрузка Whisper в Docker

--- a/.env.example
+++ b/.env.example
@@ -74,4 +74,5 @@ METRICS_PORT=9090  # Порт для /metrics, /health, /ready
 # Media Features
 VOICE_RECOGNITION_ENABLED=true  # Включить распознавание голосовых (требует openai-whisper)
 WHISPER_MODEL=base  # Модель Whisper: tiny, base, small, medium, large
+HUGGINGFACE_MIRROR=https://hf-mirror.com  # Зеркало HuggingFace для РФ (пусто если не нужно)
 CONTENT_DOWNLOAD_ENABLED=true  # Включить автозагрузку видео/аудио по ссылкам
