--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,16 @@ OLLAMA_TIMEOUT=90
 OLLAMA_WEB_SEARCH_ENABLED=true  # Включить веб-поиск для актуальной информации
 
 # Web Search Configuration (Anti-Hallucination)
+# Приоритет провайдеров: SearXNG → Brave → DuckDuckGo
+#
+# SearXNG (рекомендуется) — бесплатно, без лимитов, self-hosted
+# Можно поднять свой: https://docs.searxng.org/admin/installation.html
+# Или использовать публичные инстансы (автоматически)
+SEARXNG_URL=  # Свой инстанс, например: http://localhost:8080
+#
 # Brave Search API — бесплатный tier 2000 запросов/месяц
 # Получить ключ: https://brave.com/search/api/
-BRAVE_SEARCH_API_KEY=  # Оставь пустым для использования DuckDuckGo (без API)
+BRAVE_SEARCH_API_KEY=  # Оставь пустым если используешь SearXNG
 
 # Fallback модели (локальные, когда cloud недоступен)
 OLLAMA_FALLBACK_ENABLED=true  # Включить автопереключение на локальные модели
