--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,9 @@ BRAVE_SEARCH_API_KEY=  # Оставь пустым если используеш
 
 # Fallback модели (локальные, когда cloud недоступен)
 OLLAMA_FALLBACK_ENABLED=true  # Включить автопереключение на локальные модели
-OLLAMA_FALLBACK_MODEL=qwen3:8b  # Резервная модель для текста
-OLLAMA_FALLBACK_VISION_MODEL=qwen3-vl:4b-instruct  # Резервная модель для vision
-OLLAMA_FALLBACK_MEMORY_MODEL=qwen3:8b  # Резервная модель для памяти
+OLLAMA_FALLBACK_MODEL=gemma3:12b  # Резервная модель для текста (хорошо следует инструкциям)
+OLLAMA_FALLBACK_VISION_MODEL=gemma3:12b  # Резервная модель для vision (gemma3 поддерживает vision)
+OLLAMA_FALLBACK_MEMORY_MODEL=gemma3:12b  # Резервная модель для памяти
 
 # ChromaDB Configuration (для RAG - "Мозг Олега")
 # Для Docker: используй имя контейнера chromadb
