feat: v7.9.6 - Ollama embeddings, fallback fixes, search improvements

--- a/.env.example
+++ b/.env.example
@@ -4,87 +4,92 @@ TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
 
 # ID владельца бота для полного доступа
 # Узнать свой ID можно у @userinfobot или @getmyid_bot
-# Владелец имеет доступ к команде /owner с панелью управления:
-# - Включение/выключение функций бота
-# - Рассылка сообщений
-# - Статус системы
-# - Управление чатами
-# - Экстренные действия
 OWNER_ID=YOUR_TELEGRAM_ID_HERE
 
+# ============================================
 # Ollama Configuration
+# ============================================
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_BASE_MODEL=deepseek-v3.2:cloud  # Основная модель для текста
-OLLAMA_VISION_MODEL=qwen3-vl:235b-cloud  # Модель для анализа изображений
-OLLAMA_MEMORY_MODEL=glm-4.6:cloud  # Модель для поиска в памяти и RAG
-OLLAMA_TIMEOUT=90
-OLLAMA_WEB_SEARCH_ENABLED=true  # Включить веб-поиск для актуальной информации
+OLLAMA_TIMEOUT=120  # Увеличено для cloud моделей
 
-# Web Search Configuration (Anti-Hallucination)
-# Приоритет провайдеров: SearXNG → Brave → DuckDuckGo
-#
-# SearXNG (рекомендуется) — бесплатно, без лимитов, self-hosted
-# Можно поднять свой: https://docs.searxng.org/admin/installation.html
-# Или использовать публичные инстансы (автоматически)
-SEARXNG_URL=  # Свой инстанс, например: http://localhost:8080
-#
-# Brave Search API — бесплатный tier 2000 запросов/месяц
-# Получить ключ: https://brave.com/search/api/
-BRAVE_SEARCH_API_KEY=  # Оставь пустым если используешь SearXNG
+# Cloud Models (Primary)
+OLLAMA_BASE_MODEL=deepseek-v3.2:cloud  # Main Chat + Tools (Top tier, поддерживает tools)
+OLLAMA_VISION_MODEL=qwen3-vl:235b-cloud  # Vision (cloud, топ качество)
+OLLAMA_MEMORY_MODEL=deepseek-v3.2:cloud  # Unified RAG model (лучше для саммари)
+OLLAMA_WEB_SEARCH_ENABLED=true
 
-# Fallback модели (локальные, когда cloud недоступен)
-OLLAMA_FALLBACK_ENABLED=true  # Включить автопереключение на локальные модели
-OLLAMA_FALLBACK_MODEL=gemma3:12b  # Резервная модель для текста (хорошо следует инструкциям)
-OLLAMA_FALLBACK_VISION_MODEL=gemma3:12b  # Резервная модель для vision (gemma3 поддерживает vision)
-OLLAMA_FALLBACK_MEMORY_MODEL=gemma3:12b  # Резервная модель для памяти
+# Fallback Models (Local - GPU 10GB+)
+OLLAMA_FALLBACK_ENABLED=true
+OLLAMA_FALLBACK_MODEL=gemma3:12b  # Chat + Vision (Universal, 128k context)
+OLLAMA_TOOL_MODEL=qwen3:8b  # Tools Only (Agent logic, function calling)
+OLLAMA_FALLBACK_VISION_MODEL=gemma3:12b  # Native Vision
+OLLAMA_FALLBACK_MEMORY_MODEL=gemma3:12b  # 128k context
 
-# ChromaDB Configuration (для RAG - "Мозг Олега")
-# Для Docker: используй имя контейнера chromadb
-CHROMADB_HOST=chromadb  # Хост ChromaDB сервера (пусто для локального хранения)
-CHROMADB_PORT=8000  # Порт ChromaDB сервера
-# Для локальной разработки без Docker: оставь CHROMADB_HOST пустым
-# CHROMADB_HOST=
-CHROMADB_PERSIST_DIR=./data/chroma  # Директория для локального хранения
-CHROMADB_COLLECTION_NAME=oleg_kb  # Название коллекции для базы знаний
-EMBEDDING_MODEL=all-MiniLM-L6-v2  # Модель для генерации эмбеддингов
-SIMILARITY_THRESHOLD=0.7  # Порог схожести для RAG (0.0 - 1.0)
+# ============================================
+# Web Search (Anti-Hallucination)
+# ============================================
+# Приоритет: SearXNG → Brave → DuckDuckGo
+# Свой инстанс SearXNG: http://localhost:8080
+SEARXNG_URL=
+# Brave Search API (резерв, 2000/мес бесплатно): https://brave.com/search/api/
+BRAVE_SEARCH_API_KEY=
 
-# Database Configuration
-# Для SQLite (по умолчанию):
+# ============================================
+# ChromaDB (RAG - "Мозг Олега")
+# ============================================
+CHROMADB_HOST=chromadb  # Для Docker, пусто для локального
+CHROMADB_PORT=8000
+CHROMADB_PERSIST_DIR=./data/chroma
+CHROMADB_COLLECTION_NAME=oleg_kb
+# ВАЖНО: nomic-embed-text лучше для русского чем MiniLM!
+# ollama pull nomic-embed-text
+EMBEDDING_MODEL=nomic-embed-text
+SIMILARITY_THRESHOLD=0.65  # Снижено для лучшего recall
+
+# ============================================
+# Database
+# ============================================
 DATABASE_URL=sqlite+aiosqlite:///./data/oleg.db
-# Для PostgreSQL (рекомендуется для продакшена):
+# PostgreSQL для продакшена:
 # DATABASE_URL=postgresql+asyncpg://oleg:changeme@localhost:5432/oleg_db
 
-# Redis Configuration (для кэширования и rate limiting)
-REDIS_ENABLED=false  # Включить Redis (true/false)
+
+# ============================================
+# Redis (для продакшена)
+# ============================================
+REDIS_ENABLED=false
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
-REDIS_PASSWORD=  # Оставь пустым если без пароля
+REDIS_PASSWORD=
 
-# Rate Limiting Configuration
+# ============================================
+# Rate Limiting
+# ============================================
 RATE_LIMIT_ENABLED=true
-RATE_LIMIT_REQUESTS=10  # Максимум запросов
-RATE_LIMIT_WINDOW=60  # За период (секунды)
+RATE_LIMIT_REQUESTS=15  # 10 маловато для активного диалога
+RATE_LIMIT_WINDOW=60
 
-# Toxicity Analysis
+# ============================================
+# Toxicity & Moderation
+# ============================================
 TOXICITY_ANALYSIS_ENABLED=true
-TOXICITY_THRESHOLD=75  # Порог токсичности (0-100)
+TOXICITY_THRESHOLD=75
 
-# Timezone Configuration
+# ============================================
+# System
+# ============================================
 TIMEZONE=Europe/Moscow
-
-# Logging Configuration
-# Уровень: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 LOG_FILE=logs/oleg.log
+METRICS_ENABLED=false
+METRICS_PORT=9090
 
-# Metrics (Prometheus)
-METRICS_ENABLED=false  # Включить HTTP endpoint для метрик
-METRICS_PORT=9090  # Порт для /metrics, /health, /ready
-
-# Media Features
-VOICE_RECOGNITION_ENABLED=true  # Включить распознавание голосовых (требует openai-whisper)
-WHISPER_MODEL=base  # Модель Whisper: tiny, base, small, medium, large
-HUGGINGFACE_MIRROR=https://hf-mirror.com  # Зеркало HuggingFace для РФ (пусто если не нужно)
-CONTENT_DOWNLOAD_ENABLED=true  # Включить автозагрузку видео/аудио по ссылкам
+# ============================================
+# Media & Voice
+# ============================================
+VOICE_RECOGNITION_ENABLED=true
+# base - быстро качается, small - лучше для русского (но большой), turbo - если есть GPU
+WHISPER_MODEL=base
+HUGGINGFACE_MIRROR=https://hf-mirror.com  # Зеркало для РФ
+CONTENT_DOWNLOAD_ENABLED=true
