fix: KB search по оригинальному тексту, retry для 429, memory model локальная

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ OLLAMA_TIMEOUT=120  # Увеличено для cloud моделей
 # Cloud Models (Primary)
 OLLAMA_BASE_MODEL=deepseek-v3.2:cloud  # Main Chat + Tools (Top tier, поддерживает tools)
 OLLAMA_VISION_MODEL=qwen3-vl:235b-cloud  # Vision (cloud, топ качество)
-OLLAMA_MEMORY_MODEL=deepseek-v3.2:cloud  # Unified RAG model (лучше для саммари)
+OLLAMA_MEMORY_MODEL=gemma3:12b  # Локальная для RAG (без rate limits, 128k контекст)
 OLLAMA_WEB_SEARCH_ENABLED=true
 
 # Fallback Models (Local - GPU 10GB+)
