--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,13 @@ RATE_LIMIT_REQUESTS=15  # 10 маловато для активного диал
 RATE_LIMIT_WINDOW=60
 
 # ============================================
+# Antispam (лимит запросов к боту)
+# ============================================
+ANTISPAM_ENABLED=true
+ANTISPAM_BURST=5      # 5 запросов/минуту (защита от спама)
+ANTISPAM_HOURLY=50    # 50 запросов/час (owner без лимита)
+
+# ============================================
 # Toxicity & Moderation
 # ============================================
 TOXICITY_ANALYSIS_ENABLED=true
