feat: SDOC Integration - Oleg as Steam Deck OC resident

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,19 @@ TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
 OWNER_ID=YOUR_TELEGRAM_ID_HERE
 
 # ============================================
+# SDOC (Steam Deck OC) - Родной дом Олега
+# ============================================
+# Олег работает ТОЛЬКО в этой группе и в ЛС
+# Chat ID группы (узнать можно добавив бота @getidsbot)
+SDOC_CHAT_ID=
+# Username группы (без @)
+SDOC_CHAT_USERNAME=steamdeckoverclock
+# ID владельца SDOC (@k1gsss) - имеет полный доступ к админке
+SDOC_OWNER_ID=703959426
+# Эксклюзивный режим: Олег игнорирует другие группы
+SDOC_EXCLUSIVE_MODE=true
+
+# ============================================
 # Ollama Configuration
 # ============================================
 OLLAMA_BASE_URL=http://localhost:11434
