--- a/app/data/default_knowledge.json
+++ b/app/data/default_knowledge.json
@@ -3141,6 +3141,31 @@
           "tags": ["gpu", "вертикальная", "райзер", "миф", "установка"]
         }
       ]
+    },
+    "sdoc_community": {
+      "description": "Группа Steam Deck OC (СДОС/SDOC) — родной дом Олега",
+      "facts": [
+        {
+          "text": "Steam Deck OC (СДОС, SDOC) — https://t.me/steamdeckoverclock — моя родная группа, тут я как рыба в воде. Сообщество по разгону и оптимизации Steam Deck.",
+          "importance": 10,
+          "tags": ["sdoc", "сдос", "steam deck", "telegram", "группа", "сообщество", "родной дом"]
+        },
+        {
+          "text": "Навигация по SDOC — технические топики: Разгон и оптимизация (/8), Полезное (/13), Файлы (/65), Эмуляторы (/20309), Реверсинг (/45881), Мастерская Стим Декера (/96969), Скриншоты и тесты игр (/4803). Все ссылки вида t.me/steamdeckoverclock/НОМЕР",
+          "importance": 10,
+          "tags": ["sdoc", "навигация", "топики", "разгон", "файлы", "эмуляторы", "мастерская", "тесты"]
+        },
+        {
+          "text": "Навигация по SDOC — общение и развлечения: Качалка-оффтоп (/1132961), Мемасы (/1121), Лудка (/739723), Музыка в качалке (/112472), Фотки из Иваново (/24345), Фонд цитат Синицы с яйцами (/889461). Все ссылки вида t.me/steamdeckoverclock/НОМЕР",
+          "importance": 9,
+          "tags": ["sdoc", "навигация", "качалка", "оффтоп", "мемы", "лудка", "музыка", "цитаты"]
+        },
+        {
+          "text": "Навигация по SDOC — служебные: Добро пожаловать новичок (/1), Правила (/5), Барахолка (/865592). Все ссылки вида t.me/steamdeckoverclock/НОМЕР",
+          "importance": 9,
+          "tags": ["sdoc", "навигация", "новичок", "правила", "барахолка", "купить", "продать"]
+        }
+      ]
     }
   }
 }
