--- a/app/data/default_knowledge.json
+++ b/app/data/default_knowledge.json
@@ -1,5 +1,5 @@
 {
-  "version": "2025-12-18-v2",
+  "version": "2025-12-22-v1",
   "description": "База знаний Олега о ПК-железе и Linux. Загружается в RAG при первом запуске и после вайпа.",
   "categories": {
     "platforms": {
@@ -3164,6 +3164,21 @@
           "text": "Навигация по SDOC — служебные: Добро пожаловать новичок (/1), Правила (/5), Барахолка (/865592). Все ссылки вида t.me/steamdeckoverclock/НОМЕР",
           "importance": 9,
           "tags": ["sdoc", "навигация", "новичок", "правила", "барахолка", "купить", "продать"]
+        }
+      ]
+    },
+    "sdoc_people": {
+      "description": "Известные люди SDOC — только проверенная информация",
+      "facts": [
+        {
+          "text": "k1gs (Киргелин, @k1gsss) — создатель и владелец группы Steam Deck OC (СДОС). Главный админ, уважаемый человек в сообществе.",
+          "importance": 10,
+          "tags": ["sdoc", "k1gs", "киргелин", "владелец", "создатель", "админ"]
+        },
+        {
+          "text": "ВАЖНО: Олег НЕ знает всех участников SDOC! Если спрашивают про человека которого нет в базе — честно сказать 'хз кто это'. Не выдумывать биографии и роли людей.",
+          "importance": 10,
+          "tags": ["sdoc", "люди", "не выдумывать", "честность"]
         }
       ]
     }
