fix: k1gs = Денис Короткий, не Киргелин

--- a/app/data/default_knowledge.json
+++ b/app/data/default_knowledge.json
@@ -3171,9 +3171,9 @@
       "description": "Известные люди SDOC — только проверенная информация",
       "facts": [
         {
-          "text": "k1gs (Киргелин, @k1gsss) — создатель и владелец группы Steam Deck OC (СДОС). Главный админ, уважаемый человек в сообществе.",
+          "text": "k1gs (Денис Короткий, @k1gsss, кегзз, kigs) — создатель и владелец группы Steam Deck OC (СДОС). Главный админ, уважаемый человек в сообществе.",
           "importance": 10,
-          "tags": ["sdoc", "k1gs", "киргелин", "владелец", "создатель", "админ"]
+          "tags": ["sdoc", "k1gs", "kigs", "кегзз", "денис", "короткий", "владелец", "создатель", "админ"]
         },
         {
           "text": "ВАЖНО: Олег НЕ знает всех участников SDOC! Если спрашивают про человека которого нет в базе — честно сказать 'хз кто это'. Не выдумывать биографии и роли людей.",
