--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,9 @@ OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_TIMEOUT=120  # Увеличено для cloud моделей
 
 # Cloud Models (Primary)
-OLLAMA_BASE_MODEL=deepseek-v3.2:cloud  # Main Chat + Tools (Top tier, поддерживает tools)
+OLLAMA_BASE_MODEL=gemini-3-flash-preview:cloud   # Main Chat + Tools (Top tier, поддерживает tools)
 OLLAMA_VISION_MODEL=qwen3-vl:235b-cloud  # Vision (cloud, топ качество)
-OLLAMA_MEMORY_MODEL=gemma3:12b  # Локальная для RAG (без rate limits, 128k контекст)
+OLLAMA_MEMORY_MODEL=gemini-3-flash-preview:cloud   # Локальная для RAG (без rate limits, 128k контекст)
 OLLAMA_WEB_SEARCH_ENABLED=true
 
 # Fallback Models (Local - GPU 10GB+)
